# rust-word-game

./: Cargo.toml  readme.md
src/: app.rs  game.rs  language.rs  main.rs  read_data.rs  utils.rs  word.rs
src/assets/: ohabolana.json
src/enums/: game_type.rs  mod.rs
