[package]
name = "word-game"
version = "0.1.0"
edition = "2021"
# author = [
#     "Chrys Rakotonimanan <chrysrakk@gmail.com>"
# ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = { version = "3.2.22", features = ["derive"] }
# serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
unicode-segmentation = "1.10.0"
colored = "2.0.0"